# ForgeKit

./: Cargo.toml  README  forge_kit.d.ts  forge_kit.js  forge_kit_bg.wasm  forge_kit_bg.wasm.d.ts  package.json
.github/workflows/: wasm.yml
benches/: metadata.rs  parser.rs  visitor.rs
src/: lib.rs  metadata.rs  parser.rs  types.rs  utils.rs  visitor.rs  wasm.rs
tests/: metadata.rs  parser.rs  visitor.rs
