[package]
name = "forge-kit"
version = "0.1.0"
edition = "2024"
description = "IDK WHAT TO TYPE HERE"
authors = ["Muhammad Bin Asim <muhammadbinasim471@gmail.com>"]
homepage = "https://forgekit.vercel.app"
repository = "https://github.com/EdexLabs/forgekit"
license = "GPL-3.0"

[lib]
name = "forge_kit"
path = "src/lib.rs"
crate-type = ["lib", "cdylib"]

[dependencies]
dashmap = "6.1.0"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
smallvec = "1.15.1"

wasm-bindgen = { version = "0.2", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "parser"
harness = false

[[bench]]
name = "visitor"
harness = false

[[bench]]
name = "metadata"
harness = false

[profile.bench]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[features]
validation = []
wasm = ["dep:wasm-bindgen"]
